fixed logo stretching, lowered computer time

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background: black;
+  height: 100%;
 }
 
 button {
@@ -29,6 +30,7 @@ p {
   background: -webkit-linear-gradient(#000000, #444444);
   background: linear-gradient(#000000, #444444);
   align-items: center;
+  height: 100%
 }
 
 .stage-left {
@@ -94,7 +96,6 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
   padding-bottom: 5px;
 }
 
